Styles - mobile response - smooth scrolling - padding & margin collapse fixes - added links for navigation & soc.media

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
 
 @layer base {
   html {
-    @apply overflow-x-clip xl:text-[16px] md:text-[14px] text-[12px];
+    @apply overflow-x-clip xl:text-[16px] md:text-[14px] text-[12px] scroll-smooth scroll-pt-32;
   }
 
   body {
@@ -21,7 +21,7 @@
   }
 
   section {
-    @apply px-16;
+    @apply px-4 sm:px-8;
   }
 
   h2 {
@@ -35,4 +35,8 @@
   h4 {
     @apply text-xl font-bold;
   }
+
+  details[open] li {
+    @apply pl-4
+  } 
 }
